# todo

./: README.md  auth.py  database.py  main.py  models.py  pyproject.toml  schemas.py
crud/: list.py  user.py
models/: todo.py  user.py
routers/: auth.py  list.py  todo.py  user.py
schemas/: list.py  user.py
