[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pyclean>=3.7.0",
    "pydantic>=2.13.4",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
]
