[project]
name = "todo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiosqlite>=0.22.1",
    "asyncpg>=0.31.0",
    "black>=26.5.1",
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.3",
    "mysql-connector-python>=9.7.0",
    "passlib[bcrypt]>=1.7.4",
    "pyclean>=3.7.0",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
]
