[project]
name = "todo-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi-users[sqlalchemy]>=15.0.5",
    "fastapi[standard]>=0.136.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.13.4",
    "pymysql>=1.2.0",
    "python-jose[cryptography]>=3.5.0",
    "sqlmodel>=0.0.38",
]
